# y-junctions

./: .coderabbit.yaml  .env.example  .gitignore  .lintstagedrc.js  .lintstagedrc.json  .mcp.json  .mise.toml  CLAUDE.md  DEPLOY.md  README.md  docker-compose.yml  package.json
.github/: dependabot.yml
.github/workflows/: backend-ci.yml  ci.yml  deploy.yml  frontend-ci.yml
.husky/: pre-commit
backend/: .dockerignore  .env.example  .gcloudignore  .gitignore  .lintstagedrc.js  Cargo.toml  Dockerfile  docker-compose.yml
backend/docker/: init-db.sh
backend/migrations/: 001_create_y_junctions.sql  002_add_bearings.sql  003_add_elevation.sql  004_add_way_tags.sql
backend/src/: lib.rs  main.rs  test_formatting.rs
backend/src/api/: handlers.rs  routes.rs
backend/src/db/: mod.rs  repository.rs
backend/src/domain/: junction.rs  mod.rs
backend/src/importer/: calculator.rs  detector.rs  elevation.rs  inserter.rs  mod.rs  parser.rs
backend/tests/: api_tests.rs
backend/tests/fixtures/gsi/xml/: FG-GML-5238-40-00-DEM5B-20210115.xml
doc/: deploy-automation-todo.md  elevation-feature.md  github-actions-deployment.md  mvp-requirements.md  todo.md
frontend/: .env.production  .lintstagedrc.js  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.css  App.test.tsx  App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: FilterPanel.tsx  JunctionPopup.tsx  MapView.tsx  StatsDisplay.tsx
frontend/src/hooks/: useFilters.ts  useJunctions.ts
frontend/src/types/: index.ts
scripts/: setup-worktree.sh
terraform/: backend.tf  frontend.tf  github-actions.tf  neon.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
